[gd_scene load_steps=33 format=3 uid="uid://dd4dx6uh7rvx5"]

[ext_resource type="Script" path="res://scripts/enemybat.gd" id="1_vu4pc"]
[ext_resource type="Theme" uid="uid://ls2ysum0p1i5" path="res://scenes/healthbar.tres" id="2_hb5o5"]
[ext_resource type="PackedScene" uid="uid://bab0au7cgq1e2" path="res://scenes/character_sprite.tscn" id="3_fiu5g"]
[ext_resource type="Texture2D" uid="uid://caabhu1h8ti2i" path="res://sprites/New Art/Monster_Creatures_Fantasy/Flying eye/spritesheet.png" id="4_g3y0l"]
[ext_resource type="Texture2D" uid="uid://dxdvwrbs6y7sq" path="res://sprites/New Art/Fire/png/orange/loops/burning_loop_1.png" id="5_p1b31"]
[ext_resource type="PackedScene" uid="uid://dd1s28kbfnt7j" path="res://scenes/sfx.tscn" id="6_picty"]

[sub_resource type="CircleShape2D" id="CircleShape2D_skg4e"]
radius = 363.349

[sub_resource type="CircleShape2D" id="CircleShape2D_uapla"]
radius = 176.011

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7g5h1"]
size = Vector2(26.6667, 21.6667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aelc0"]
size = Vector2(13.5266, 6.06666)

[sub_resource type="Animation" id="Animation_3lx13"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [60]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackHitboxAreaSide/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackHitboxAreaSide2/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_tghfq"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [35, 36, 37]
}

[sub_resource type="Animation" id="Animation_2wdao"]
resource_name = "side_attack"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackHitboxAreaSide/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackHitboxAreaSide2/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_2ftyx"]
resource_name = "side_attack_2"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 20, 21, 22, 23, 24]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackHitboxAreaSide2/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackHitboxAreaSide/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_cejj8"]
resource_name = "side_idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_qfhbs"]
resource_name = "walk_right"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_swk4j"]
resource_name = "test"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_24oyt"]
_data = {
"RESET": SubResource("Animation_3lx13"),
"death": SubResource("Animation_tghfq"),
"side_attack": SubResource("Animation_2wdao"),
"side_attack_2": SubResource("Animation_2ftyx"),
"side_idle": SubResource("Animation_cejj8"),
"side_walk": SubResource("Animation_qfhbs"),
"test": SubResource("Animation_swk4j")
}

[sub_resource type="GDScript" id="GDScript_gxkqu"]
script/source = "extends Area2D

var damage = global.bat_damage
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s6r5n"]
size = Vector2(29, 54)

[sub_resource type="GDScript" id="GDScript_1qvul"]
script/source = "extends Area2D

var damage = global.bat_damage
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r252a"]
size = Vector2(43.3333, 46.6667)

[sub_resource type="CircleShape2D" id="CircleShape2D_287to"]
radius = 18.9873

[sub_resource type="AtlasTexture" id="AtlasTexture_fd8c0"]
atlas = ExtResource("5_p1b31")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhc8t"]
atlas = ExtResource("5_p1b31")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7c4r"]
atlas = ExtResource("5_p1b31")
region = Rect2(48, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_agxdt"]
atlas = ExtResource("5_p1b31")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gol1a"]
atlas = ExtResource("5_p1b31")
region = Rect2(96, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8magt"]
atlas = ExtResource("5_p1b31")
region = Rect2(120, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_21luw"]
atlas = ExtResource("5_p1b31")
region = Rect2(144, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_23yj2"]
atlas = ExtResource("5_p1b31")
region = Rect2(168, 0, 24, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fir3n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd8c0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhc8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7c4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agxdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gol1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8magt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21luw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23yj2")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="enemybat" type="CharacterBody2D"]
position = Vector2(-3, 0)
scale = Vector2(0.5, 0.5)
collision_layer = 4
collision_mask = 21
slide_on_ceiling = false
script = ExtResource("1_vu4pc")

[node name="follow_area" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="follow_area"]
shape = SubResource("CircleShape2D_skg4e")

[node name="detection_area" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_uapla")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
y_sort_enabled = true
position = Vector2(5, -11.6667)
shape = SubResource("RectangleShape2D_7g5h1")

[node name="enemy_hitbox" type="Area2D" parent="."]
visible = false
position = Vector2(2.85714, 1.42857)
scale = Vector2(1.97143, 3.57143)
collision_layer = 4
collision_mask = 2

[node name="Hitbox" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(1.08696, -3.43333)
shape = SubResource("RectangleShape2D_aelc0")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.1

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(1, 0.207843, 0.152941, 1)
offset_left = -8.57143
offset_top = 12.8571
offset_right = 15.4286
offset_bottom = 16.8571
theme = ExtResource("2_hb5o5")
max_value = 150.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="death_timer" type="Timer" parent="."]
one_shot = true

[node name="Knockback_Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="PlayerSprite" parent="." instance=ExtResource("3_fiu5g")]
position = Vector2(0, -14)
texture = ExtResource("4_g3y0l")
hframes = 38
vframes = 1
frame = 24

[node name="PlayerAnimations" type="AnimationPlayer" parent="PlayerSprite"]
libraries = {
"": SubResource("AnimationLibrary_24oyt")
}

[node name="AttackHitboxAreaSide" type="Area2D" parent="PlayerSprite"]
position = Vector2(25, -29)
collision_layer = 8
collision_mask = 0
script = SubResource("GDScript_gxkqu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSprite/AttackHitboxAreaSide"]
position = Vector2(0.499998, 29)
shape = SubResource("RectangleShape2D_s6r5n")
disabled = true

[node name="AttackHitboxAreaSide2" type="Area2D" parent="PlayerSprite"]
position = Vector2(31.6667, -67.6666)
collision_layer = 8
collision_mask = 0
script = SubResource("GDScript_1qvul")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSprite/AttackHitboxAreaSide2"]
position = Vector2(-20, 67)
shape = SubResource("RectangleShape2D_r252a")
disabled = true

[node name="Attack_Range" type="Area2D" parent="."]
visible = false
position = Vector2(12.8571, -8.57143)
scale = Vector2(1.72, 1.56)
collision_layer = 0
collision_mask = 2

[node name="Attack_Range_Circle" type="CollisionShape2D" parent="Attack_Range"]
position = Vector2(-7.47506, 1.221)
scale = Vector2(1.39406, 1.03663)
shape = SubResource("CircleShape2D_287to")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="ShootPosition_Right" type="Marker2D" parent="."]
visible = false
position = Vector2(5, -15)

[node name="ShootPosition_Left" type="Marker2D" parent="."]
visible = false
position = Vector2(-6.66667, -15)

[node name="FireAnimation" type="AnimatedSprite2D" parent="."]
visible = false
show_behind_parent = true
position = Vector2(0, -16.6667)
scale = Vector2(1.68056, 1.33333)
sprite_frames = SubResource("SpriteFrames_fir3n")
autoplay = "default"
frame_progress = 0.908269

[node name="FireDuration" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="FireDamage" type="Timer" parent="."]
wait_time = 0.1

[node name="Charge_Attack_Timer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="sfx" parent="." instance=ExtResource("6_picty")]

[connection signal="body_exited" from="follow_area" to="." method="_on_follow_area_body_exited"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="area_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_area_entered"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="Knockback_Timer" to="." method="_on_knockback_timer_timeout"]
[connection signal="body_entered" from="Attack_Range" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="Attack_Range" to="." method="_on_attack_range_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="FireDuration" to="." method="_on_fire_duration_timeout"]
[connection signal="timeout" from="FireDamage" to="." method="_on_fire_damage_timeout"]
[connection signal="timeout" from="Charge_Attack_Timer" to="." method="_on_charge_attack_timer_timeout"]
